[project]
name = "kfa"
description = "Khmer Forced Aligner powered by Wav2Vec2CTC and Phonetisaurus"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "Seanghay Yath", email = "seanghay.dev@gmail.com" }]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Cython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "sosap==0.0.1",
  "onnxruntime==1.16.3",
  "numpy==1.24.4",
  "khmercut==0.0.2",
  "librosa==0.10.1"
]

[project.urls]
repository = "https://github.com/seanghay/kfa"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["kfa"]

[build-system]
requires = ["setuptools==67.4.0"]
build-backend = "setuptools.build_meta"
